@@ -22,7 +22,6 @@ class PharExtensionInterceptor implements Assertable {
    *
    * @param string $path
    *   The path of the phar file to check.
-   *
    * @param string $command
    *   The command being carried out.
    *
@@ -46,6 +45,8 @@ class PharExtensionInterceptor implements Assertable {
   }
 
   /**
+   * Determines if a path has a .phar extension or invoked execution.
+   *
    * @param string $path
    *   The path of the phar file to check.
    *
@@ -62,8 +63,13 @@ class PharExtensionInterceptor implements Assertable {
     // not not have .phar extension then this should be allowed. For
     // example, some CLI tools recommend removing the extension.
     $backtrace = debug_backtrace(DEBUG_BACKTRACE_IGNORE_ARGS);
-    $caller = array_pop($backtrace);
-    if (isset($caller['file']) && $baseFile === $caller['file']) {
+    // Find the last entry in the backtrace containing a 'file' key as
+    // sometimes the last caller is executed outside the scope of a file. For
+    // example, this occurs with shutdown functions.
+    do {
+      $caller = array_pop($backtrace);
+    } while (empty($caller['file']) && !empty($backtrace));
+    if (isset($caller['file']) && $baseFile === Helper::determineBaseFile($caller['file'])) {
       return TRUE;
     }
     $fileExtension = pathinfo($baseFile, PATHINFO_EXTENSION);
